Fixes page title and header collapsing in my flea market items page
Changed css selector used for the header rules to one that is shared
between flea market item and my flea market item pages.

mario h.
node/61086

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -814,11 +814,11 @@ input[type="submit"]:hover, input[type="submit"]:focus,
 .section-flea-market .views-field-edit-node {
   min-width: 90px;
 }
-.section-flea-market .view-header {
+.section-flea-market .view-flea-market-listing {
   padding-top: 3rem;
   margin-bottom: 2rem;
 }
-.section-flea-market .view-header p {
+.section-flea-market .view-flea-market-listing p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
